--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
 
 			<!-- Header -->
 				<header id="header" class="alt">
-					<h1 id="logo"><a href="index.html">Twenty <span>by HTML5 UP</span></a></h1>
+                    <h1 id="logo"><a href="index.html">OPD system<span> best for hospital</span></a></h1>
 					<nav id="nav">
 						<ul>
+<!--
 							<li class="current"><a href="index.html">Welcome</a></li>
 							<li class="submenu">
 								<a href="#">Layouts</a>
@@ -42,7 +43,8 @@
 									</li>
 								</ul>
 							</li>
-							<li><a href="#" class="button special">Sign Up</a></li>
+-->
+							<li><a href="#" class="button special">go to github</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -59,16 +61,18 @@
 					<div class="inner">
 
 						<header>
-							<h2>TWENTY</h2>
+							<h2>OPD System</h2>
 						</header>
-						<p>This is <strong>Twenty</strong>, a free
+						<p>This is <strong>OPD system</strong>, a free
 						<br />
-						responsive template
+                            end-to-end <strong> node.js </strong> system 
+                        <br />
+                        for Out Patient Department Online System
 						<br />
-						by <a href="http://html5up.net">HTML5 UP</a>.</p>
+						by <a href="http://html5up.net">SE co.</a>.</p>
 						<footer>
 							<ul class="buttons vertical">
-								<li><a href="#main" class="button fit scrolly">Tell Me More</a></li>
+								<li><a href="#main" class="button fit scrolly">npm install -g opd-system</a></li>
 							</ul>
 						</footer>
 
